--- a/web/src/style.css
+++ b/web/src/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;600;700&display=swap');
+
 :root {
   font-family: 'Fira Code', Monaco, Consolas, monospace;
   line-height: 1.4;
