Fuzzy match highlight orange on light, white on selected orange background

--- a/web/src/style.css
+++ b/web/src/style.css
@@ -892,8 +892,12 @@ h1 {
 }
 
 .fuzzy-match-highlight {
-  color: #fff;
+  color: var(--accent);
   font-weight: 700;
+}
+
+.fuzzy-finder-item.selected .fuzzy-match-highlight {
+  color: #fff;
 }
 
 .fuzzy-finder-empty {
