--- a/www/src/layouts/Layout.astro
+++ b/www/src/layouts/Layout.astro
@@ -17,6 +17,7 @@ const { title, description } = Astro.props;
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@500;700&display=swap" rel="stylesheet">
+  <script type="module" src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
   <title>{title}</title>
   {description && <meta name="description" content={description} />}
 </head>
